added mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -71,7 +71,11 @@
             </div>
           </div>
           <button class="set-time-btn">Set Time</button>
-          <div class="final-schedule hidden"></div>
+          <div class="final-schedule hidden">
+            <p>wake up time: </p>
+            <p>lunch time: </p>
+            <p>nap time: </p>
+          </div>
         </div>
         <div class="dynamic-img-block">
           <div class="dynamic-img"></div>
