--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <p>set nap time</p>
                 <select name="" id="nap-time">
                   <option value="">default time</option>
-                  <option value="22">10pm-11pm</option>
+                  <option value="21">9pm-10pm</option>
                   <option value="22">11pm-12pm</option>
                 </select>
               </div>
@@ -85,7 +85,7 @@
           </div>
         </div>
         <div class="dynamic-img-block">
-          <div class="dynamic-img"></div>
+          <div class="dynamic-img" id="d-img"></div>
         </div>
       </section>
     </div>
