--- a/index.html
+++ b/index.html
@@ -53,8 +53,29 @@
                 <p>set wake up time</p>
                 <select id="wake-up-time">
                   <option value="">default time</option>
-                  <option value="16">4pm-5pm</option>
-                  <option value="16">5pm-6pm</option>
+                  <option value="1am-2am">1am-2am</option>
+                  <option value="2am-3am">2am-3am</option>
+                  <option value="3am-4am">3am-4am</option>
+                  <option value="4am-5am">4am-5am</option>
+                  <option value="5am-6am">5am-6am</option>
+                  <option value="6am-7am">6am-7am</option>
+                  <option value="7am-8am">7am-8am</option>
+                  <option value="8am-9am">8am-9am</option>
+                  <option value="9am-10am">9am-10am</option>
+                  <option value="10am-11am">10am-11am</option>
+                  <option value="11am-12pm">11am-12pm</option>
+                  <option value="12pm-1pm">12pm-1pm</option>
+                  <option value="1pm-2pm">1pm-2pm</option>
+                  <option value="2pm-3pm">2pm-3pm</option>
+                  <option value="3pm-4pm">3pm-4pm</option>
+                  <option value="4pm-5pm">4pm-5pm</option>
+                  <option value="5pm-6pm">5pm-6pm</option>
+                  <option value="6pm-7pm">6pm-7pm</option>
+                  <option value="7pm-8pm">7pm-8pm</option>
+                  <option value="8pm-9pm">8pm-9pm</option>
+                  <option value="9pm-10pm">9pm-10pm</option>
+                  <option value="10pm-11pm">10pm-11pm</option>
+                  <option value="11pm-12am">11pm-12am</option>
                 </select>
               </div>
               <div class="after">
@@ -62,8 +83,29 @@
                 <p>set lunch time</p>
                 <select name="" id="lunch-time">
                   <option value="">default time</option>
-                  <option value="17">5pm-6pm</option>
-                  <option value="17">7pm-8pm</option>
+                  <option value="1am-2am">1am-2am</option>
+                  <option value="2am-3am">2am-3am</option>
+                  <option value="3am-4am">3am-4am</option>
+                  <option value="4am-5am">4am-5am</option>
+                  <option value="5am-6am">5am-6am</option>
+                  <option value="6am-7am">6am-7am</option>
+                  <option value="7am-8am">7am-8am</option>
+                  <option value="8am-9am">8am-9am</option>
+                  <option value="9am-10am">9am-10am</option>
+                  <option value="10am-11am">10am-11am</option>
+                  <option value="11am-12pm">11am-12pm</option>
+                  <option value="12pm-1pm">12pm-1pm</option>
+                  <option value="1pm-2pm">1pm-2pm</option>
+                  <option value="2pm-3pm">2pm-3pm</option>
+                  <option value="3pm-4pm">3pm-4pm</option>
+                  <option value="4pm-5pm">4pm-5pm</option>
+                  <option value="5pm-6pm">5pm-6pm</option>
+                  <option value="6pm-7pm">6pm-7pm</option>
+                  <option value="7pm-8pm">7pm-8pm</option>
+                  <option value="8pm-9pm">8pm-9pm</option>
+                  <option value="9pm-10pm">9pm-10pm</option>
+                  <option value="10pm-11pm">10pm-11pm</option>
+                  <option value="11pm-12am">11pm-12am</option>
                 </select>
               </div>
               <div class="night">
@@ -71,8 +113,29 @@
                 <p>set nap time</p>
                 <select name="" id="nap-time">
                   <option value="">default time</option>
-                  <option value="21">9pm-10pm</option>
-                  <option value="22">11pm-12pm</option>
+                  <option value="1am-2am">1am-2am</option>
+                  <option value="2am-3am">2am-3am</option>
+                  <option value="3am-4am">3am-4am</option>
+                  <option value="4am-5am">4am-5am</option>
+                  <option value="5am-6am">5am-6am</option>
+                  <option value="6am-7am">6am-7am</option>
+                  <option value="7am-8am">7am-8am</option>
+                  <option value="8am-9am">8am-9am</option>
+                  <option value="9am-10am">9am-10am</option>
+                  <option value="10am-11am">10am-11am</option>
+                  <option value="11am-12pm">11am-12pm</option>
+                  <option value="12pm-1pm">12pm-1pm</option>
+                  <option value="1pm-2pm">1pm-2pm</option>
+                  <option value="2pm-3pm">2pm-3pm</option>
+                  <option value="3pm-4pm">3pm-4pm</option>
+                  <option value="4pm-5pm">4pm-5pm</option>
+                  <option value="5pm-6pm">5pm-6pm</option>
+                  <option value="6pm-7pm">6pm-7pm</option>
+                  <option value="7pm-8pm">7pm-8pm</option>
+                  <option value="8pm-9pm">8pm-9pm</option>
+                  <option value="9pm-10pm">9pm-10pm</option>
+                  <option value="10pm-11pm">10pm-11pm</option>
+                  <option value="11pm-12am">11pm-12am</option>
                 </select>
               </div>
             </div>
@@ -85,7 +148,9 @@
           </div>
         </div>
         <div class="dynamic-img-block">
-          <div class="dynamic-img" id="d-img"></div>
+          <div class="dynamic-img" id="d-img">
+            <p id="img-text"></p>
+          </div>
         </div>
       </section>
     </div>
